--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -28,11 +28,14 @@ seeds:
   jaffle_shop:
     +schema: raw
     jaffle-data:
-      +enabled: "{{ var('load_source_data', false) }}"
+      +enabled: "{{ var('load_source_data', true) }}"
 
 models:
   jaffle_shop:
     staging:
       +materialized: view
     marts:
+      +materialized: table
+    warehouse:
+      +schema: warehouse
       +materialized: table
